# animated_markers

./: LICENSE  README.md
animated_marker_rviz_plugin/: CMakeLists.txt
animated_marker_rviz_plugin/src/markers/: mesh_resource_marker.cpp
animated_marker_tutorial/: CMakeLists.txt  package.xml  setup.py
animated_marker_tutorial/launch/: animated_walking_man.launch  visualization.rviz
animated_marker_tutorial/scripts/: animated_walking_man.py
animated_marker_tutorial/src/animated_marker_tutorial/: __init__.py
