<?xml version="1.0"?>
<package>
  <name>animated_marker_tutorial</name>
  <version>0.0.1</version>
  <description>
    Tutorial for displaying animated mesh markers (OGRE *.mesh and *.skeleton files) in Rviz using animated_marker_msgs
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>animated_marker_msgs</build_depend> 

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>animated_marker_msgs</run_depend>
  <run_depend>rviz</run_depend>

</package>
